--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <p>What sets the Fino Hair Mask apart from others is how effectively it restores and strengthens hair from within. After just one use, I noticed a significant difference in the overall texture and manageability of my hair. It tames frizz and adds an undeniable shine without weighing the hair down, making it perfect for both fine and thick hair types.
                 I like to use this mask once or twice a week as part of my self-care routine. After washing my hair, I apply a generous amount, focusing on the mid-lengths to the ends, and let it sit for 5-10 minutes. The result? My hair feels silky smooth and looks healthier and more vibrant. It’s particularly great for anyone dealing with heat damage or color-treated hair, as it repairs and rejuvenates strands, giving them a much-needed moisture boost.</p>
             <p>With its pleasant, subtle fragrance and salon-quality results, the Fino Hair Mask is a staple in my hair care routine. It’s affordable yet delivers results that rival high-end treatments, making it a must-have for anyone looking to pamper their hair with deep nourishment and care.</p>
-            <img class="img-hair-mask" src="images/fino__hair_mask.jpg" alt="Fino Hair Mask">
+            <img class="img-hair-mask" src="images/fino_hair_mask.jpg" alt="Fino Hair Mask">
         </article>
     </main>
 
