--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
             
             <p>On my page, you'll find my favorite products I like to use beauty-wise. Currently, you'll see that I love the Gucci Flora Gorgeous Magnolia Perfume and the Fino Hair Mask.</p>
             
-            <p>When I'm not blogging, you can find me exploring new trends in skincare and makeup, trying out the latest fragrances, or diving into a good book. I believe that beauty is not just about appearance but also about feeling good and confident in your skin!</p>
+            <p>When I'm not blogging, you can find me exploring new trends in skincare and makeup and trying out the latest fragrances. I believe that beauty is not just about appearance but also about feeling good and confident in your skin!</p>
 
             <h3>My Interests Include:</h3>
             <ul>
@@ -34,7 +34,6 @@
                 <li>Skincare and Haircare</li>
                 <li>Fashion and Style</li>
                 <li>Health and Wellness</li>
-                <li>Reading and Writing</li>
             </ul>
 
             <p>Thank you for visiting my blog! I hope you find inspiration and enjoy reading about my favorite products and beauty tips.</p>
