--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
             </ul>
 
             <p>Thank you for visiting my blog! I hope you find inspiration and enjoy reading about my favorite products and beauty tips.</p>
-            <img src="images/fahmida_profile.jpg" alt="Fahmida Ahmed" class="profile-img">
+            <img class ="profile-img" src="images/fahmida_profile.jpg" alt="Fahmida Ahmed">
         </section>
     </main>
 
