--- a/about.html
+++ b/about.html
@@ -22,11 +22,11 @@
     <main>
         <section>
             <h2>Welcome to My Blog!</h2>
-            <p>Hello everyone! My name is Fahmida   Ahmed, and I am a junior at Michigan State University. I am majoring in Information Science and minoring in Business. I am 20 years old and I love beauty and self-care products.</p>
+            <p>Hello everyone! My name is Fahmida Ahmed, and I am a junior at Michigan State University, where I am majoring in Information Science and minoring in Business. At 20 years old, I have developed a passion for beauty and self-care products, and I'm excited to share my journey with you! My interest in beauty started at a young age, as I was always fascinated by the transformative power of makeup and skincare. I enjoy discovering new products that not only enhance my appearance but also contribute to my overall well-being.</p>
             
-            <p>On my page, you'll find my favorite products I like to use beauty-wise. Currently, you'll see that I love the Gucci Flora Gorgeous Magnolia Perfume and the Fino Hair Mask.</p>
+            <p>On my page, you'll find my favorite products that I love to use in my beauty routine. Currently, you'll see that I can't get enough of the Gucci Flora Gorgeous Magnolia Perfume and the Fino Hair Mask. The Gucci Flora is my go-to fragrance, with its perfect blend of floral and fresh notes that uplift my spirits and make me feel confident. Meanwhile, the Fino Hair Mask has been a lifesaver for keeping my hair hydrated and healthy, especially during busy school days. I’ll be sharing detailed reviews, tips on how to use these products effectively, and even some personal stories about how they’ve made a difference in my life.</p>
             
-            <p>When I'm not blogging, you can find me exploring new trends in skincare and makeup and trying out the latest fragrances. I believe that beauty is not just about appearance but also about feeling good and confident in your skin!</p>
+            <p>When I'm not blogging, you can find me exploring new trends in skincare and makeup and trying out the latest fragrances. I love experimenting with different looks, from natural beauty to bold statements, and I’m always on the lookout for innovative products that can elevate my routine. I also believe that beauty is not just about appearance but also about feeling good and confident in your skin! It’s essential to embrace our uniqueness and find what works best for us individually. Thank you for joining me on this beauty adventure—I hope to inspire you, share valuable insights, and build a community where we can all feel empowered and beautiful inside and out!</p>
 
             <h3>My Interests Include:</h3>
             <ul>
