--- a/index.html
+++ b/index.html
@@ -40,6 +40,36 @@
             <p>With its pleasant, subtle fragrance and salon-quality results, the Fino Hair Mask is a staple in my hair care routine. It’s affordable yet delivers results that rival high-end treatments, making it a must-have for anyone looking to pamper their hair with deep nourishment and care.</p>
             <img class="img-hair-mask" src="images/fino_hair_mask.jpg" alt="Fino Hair Mask">
         </article>
+
+        <section>
+            <h2>Comparison of Hair Masks</h2>
+            <table>
+              <thead>
+                <tr>
+                    <th>Brand</th>
+                    <th>Key Ingredients</th>
+                    <th>Benefits</th>
+                </tr>
+              </thead> 
+              <tbody>
+                <tr>
+                    <td>Fino Hair Mask</td>
+                    <td>Royal Jelly, PCA</td>
+                    <td>Deep nourishment, tames frizz</td>
+                </tr>
+                <tr>
+                    <td>Olaplex No. 3</td>
+                    <td>Bis-aminopropyl diglycol dimaleate</td>
+                    <td>Repairs damaged hair, strengthens</td>
+                </tr>
+                <tr>
+                    <td>Moroccanoil Mask</td>
+                    <td>Argan Oil, Keratin</td>
+                    <td>Moisture boost, enhances shine</td>
+                </tr>
+            </tbody>
+            </table>
+        </section>
     </main>
 
     <footer>
