--- a/index.html
+++ b/index.html
@@ -72,7 +72,14 @@
         </section>
     </main>
 
-    <footer>
+    <section>
+       <form>
+        <label>Sign up for our newsletter:
+            <input type="text">
+        </label>
+        <button>Subscribe</button>
+       </form> 
+    </section>
         <p>&copy; 2024 Fahmida's Blog</p>
     </footer>
   </body>
