--- a/index.html
+++ b/index.html
@@ -71,7 +71,9 @@
             </table>
         </section>
     </main>
+
     <section>
+        <h2>Subscribe to Our Newsletter</h2>
        <form>
         <label>Sign up for our newsletter:
             <input type="text">
